--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ name = "pyfm2dss"
 version = "0.1.0"
 requires-python = ">=3.9"
 dependencies = [
-    "numpy",
-    "matplotlib"
+    "cartopy>=0.23.0",
+    "matplotlib>=3.9.4",
+    "numpy>=2.0.2",
+    "pyrr>=0.10.3",
+    "scipy>=1.13.1",
+    "tqdm>=4.67.1",
 ]
