--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["scikit-build-core[rich,pyproject]"]
 build-backend = "scikit_build_core.build"
 
 [project]
-name = "pyfm2dss"
+name = "pyfm2d"
 version = "0.1.0"
 requires-python = ">=3.9"
 dependencies = [
