build: fix path to fm2dss

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ SET(CMAKE_Fortran_FLAGS "-fbounds-check -fbacktrace -fdiagnostics-color=auto")
 
 set(CMAKE_VERBOSE_MAKEFILE on)
 project(pyfm2dss)
-add_subdirectory(fm2dss)
+add_subdirectory(src/fm2dss)
