--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,11 @@ dependencies = [
     "tqdm>=4.67.1",
 ]
 
+[project.optional-dependencies]
+notebooks = [
+    "jupyterlab>=4.3.4",
+]
+
 [dependency-groups]
 dev = [
     "pytest>=8.3.4",
