--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,70 +1,57 @@
-# This workflow will upload a Python Package to PyPI when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Upload Python Package
+name: Upload to PyPI
 
 on:
-  release:
-    types: [published]
-
-permissions:
-  contents: read
+  workflow_dispatch:
+  push:
+    branches: main
+    paths:
+      - "src/cofi/version.py"
 
 jobs:
-  release-build:
+  publish_pypi:
+    if: github.repository_owner == 'inlab-geo'
+    name: Upload source distribution to PyPI
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v2
 
-      - uses: actions/setup-python@v5
+      - name: Install Python 3.9
+        uses: actions/setup-python@v2
         with:
-          python-version: "3.x"
-
-      - name: Build release distributions
+          python-version: 3.9
+      
+      - name: Extract Release Version
+        id: release_version
+        working-directory: src/pyfm2d
         run: |
-          # NOTE: put your own distribution build steps here.
-          python -m pip install build
-          python -m build
+          set -e
+          python -c "import version as v; print(v.__version__)"
+          echo ::set-output name=version::$(python -c "import version as v; print(v.__version__)")
 
-      - name: Upload distributions
-        uses: actions/upload-artifact@v4
+      - name: Create release tag
+        uses: rickstaa/action-create-tag@v1.3.0
         with:
-          name: release-dists
-          path: dist/
+          tag: "v${{ steps.release_version.outputs.version }}"
+          force_push_tag: true
 
-  pypi-publish:
-    runs-on: ubuntu-latest
-    needs:
-      - release-build
-    permissions:
-      # IMPORTANT: this permission is mandatory for trusted publishing
-      id-token: write
+      - name: Build and check sdist
+        run: |
+          pip install build
+          python -m build --sdist --wheel
 
-    # Dedicated environments with protections for publishing are strongly recommended.
-    # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
-    environment:
-      name: pypi
-      # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-      # url: https://pypi.org/p/YOURPROJECT
-      #
-      # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
-      # ALTERNATIVE: exactly, uncomment the following line instead:
-      # url: https://pypi.org/project/YOURPROJECT/${{ github.event.release.name }}
-
-    steps:
-      - name: Retrieve release distributions
-        uses: actions/download-artifact@v4
+      - name: Publish package to TestPyPI
+        uses: pypa/gh-action-pypi-publish@v1.4.1
         with:
-          name: release-dists
-          path: dist/
+          user: __token__
+          password: ${{ secrets.TEST_PYPI_TOKEN }}
+          repository_url: https://test.pypi.org/legacy/
+          verbose: true
 
-      - name: Publish release distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Publish package to PyPI
+        uses: pypa/gh-action-pypi-publish@v1.4.1
         with:
-          packages-dir: dist/
+          user: __token__
+          password: ${{ secrets.PYPI_TOKEN }}
+          verbose: true
