--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -24,7 +24,7 @@ jobs:
       
       - name: Extract Release Version
         id: release_version
-        working-directory: src/pyfm2d
+        working-directory: src/cofi
         run: |
           set -e
           python -c "import version as v; print(v.__version__)"
@@ -49,9 +49,9 @@ jobs:
           repository_url: https://test.pypi.org/legacy/
           verbose: true
 
-     - name: Publish package to PyPI
-       uses: pypa/gh-action-pypi-publish@v1.4.1
-       with:
-         user: __token__
-         password: ${{ secrets.PYPI_TOKEN }}
-         verbose: true
+      - name: Publish package to PyPI
+        uses: pypa/gh-action-pypi-publish@v1.4.1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_TOKEN }}
+          verbose: true
