--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -24,7 +24,7 @@ jobs:
       
       - name: Extract Release Version
         id: release_version
-        working-directory: src/cofi
+        working-directory: src/pyfm2d
         run: |
           set -e
           python -c "import version as v; print(v.__version__)"
