--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ MANIFEST
 .ipynb_checkpoints
 *.pyc
 
+# Auto-generated version file #
+################################
+src/pyfm2d/_version.py
+
 # OS generated files #
 ######################
 .DS_Store*
