--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["scikit-build-core[rich,pyproject]"]
+requires = ["scikit-build-core[rich,pyproject]", "setuptools-scm"]
 build-backend = "scikit_build_core.build"
 
 [project]
 name = "pyfm2d"
-version = "0.1.7"
+dynamic = ["version"]
 requires-python = ">=3.9"
 dependencies = [
     "cartopy>=0.2.3",
@@ -19,6 +19,12 @@ dependencies = [
 notebooks = [
     "jupyterlab>=4.3.4",
 ]
+
+[tool.scikit-build.metadata.version]
+provider = "scikit_build_core.metadata.setuptools_scm"
+
+[tool.setuptools_scm]
+write_to = "src/pyfm2d/_version.py"
 
 [dependency-groups]
 dev = [
